# Spot-Tracking-Master

spot-tracking-master/: .arcconfig  .arclint  .gitignore  LICENSE  README.md  spottracking.cabal
spot-tracking-master/.halcyon/: constraints
spot-tracking-master/app/: index.html
spot-tracking-master/app/static/: build.js
spot-tracking-master/app/static/css/: app.css  main.css
spot-tracking-master/app/static/js/: addevents.js  addracers.js  app.js  mapsetup.js  sidebar.js  thirdparty.js
spot-tracking-master/app/static/js/lib/: bacon.js  lodash.js
spot-tracking-master/app/static/jsx/: sidebar.js
spot-tracking-master/app/static/prod/: addevents.js  addevents.js.map  addevents.js.src.js  addracers.js  addracers.js.map  app.js  app.js.map  build.txt  mapsetup.js  mapsetup.js.map  sidebar.js  sidebar.js.map  smarker.js  smarker.js.map  smarker.js.src.js  thirdparty.js  thirdparty.js.map  utils.js  utils.js.map  utils.js.src.js
spot-tracking-master/app/static/prod/lib/: Bacon-0.7.50.js  Bacon-0.7.50.js.map  bacon.js  bacon.js.map  jquery-1.11.2.js  jquery-1.11.2.js.map  jquery.js  jquery.js.map  lodash-3.3.1.js  lodash-3.3.1.js.map  lodash.js  lodash.js.map  lodash.js.src.js  react.js  react.js.map  react.js.src.js  require-async.js  require-async.js.map  require.js  require.js.map
spot-tracking-master/arc_libs/hspec/: .phutil_module_cache  __phutil_library_init__.php  __phutil_library_map__.php
spot-tracking-master/arc_libs/hspec/src/: HspecUnitTestEngine.php
spot-tracking-master/deployment/: .gitignore  README.md  spot.json  variables.json.template
spot-tracking-master/deployment/cookbooks/postgresql/attributes/: default.rb
spot-tracking-master/deployment/cookbooks/postgresql/recipes/: server_redhat.rb
spot-tracking-master/deployment/sources/: app-nginx  ks.cfg  mynginx.pp  spot.crontab  st-server.service
spot-tracking-master/fixtures/: addHistPoints.js  all.sql  config.json  nginx.conf  spotresponse.json
spot-tracking-master/lib/: ST.hs
spot-tracking-master/lib/ST/: App.hs  Database.hs  Instances.hs  Utils.hs
spot-tracking-master/lib/ST/App/: Utils.hs  Views.hs
spot-tracking-master/scripts/: makedb.sql  testfixture.sql
spot-tracking-master/server/: Main.hs
spot-tracking-master/spot-client/: Main.hs
spot-tracking-master/test/: Spec.hs
