name:                spottracking
version:             0.1.0.3
synopsis:            Aggregate spot feeds to display on google maps
-- description:
license:             AllRightsReserved
license-file:        LICENSE
author:              Rickey Visinski
maintainer:          rickey.visinski at moat.com
-- copyright:
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.18

source-repository head
  type: git
  location: https://github.com/rickeyski/spot-tracking.git

flag devel
  description: Enable extra request logging
  default: False
  manual: True

library
  exposed-modules:     ST
                      ,ST.App
  other-modules:       ST.Instances
                      ,ST.Utils
                      ,ST.Database
                      ,ST.App.Utils
                      ,ST.App.Views

  build-depends:       base
                      ,aeson
                      ,text
                      ,bytestring
                      ,hasql
                      ,hasql-postgres
                      ,hasql-backend
                      ,transformers
                      ,time
                      ,vector
                      ,old-locale
                      ,scotty
                      ,blaze-html
                      ,blaze-markup

  hs-source-dirs:      lib
  default-language:    Haskell2010
  ghc-options:         -Wall -fwarn-tabs -threaded -O2 -rtsopts

executable spot-client
  main-is:             Main.hs
  build-depends:       base
                      ,spottracking
                      ,aeson
                      ,text
                      ,bytestring
                      ,hasql
                      ,hasql-postgres
                      ,hasql-backend
                      ,transformers
                      ,network
                      ,http-conduit
                      ,http-types
                      ,vector

  hs-source-dirs:      spot-client
  default-language:    Haskell2010
  ghc-options:         -Wall -fwarn-tabs -threaded -O2 -rtsopts

executable st-server
  if flag(devel)
    cpp-options:       -DDEVEL
  main-is:             Main.hs
  build-depends:       base
                      ,spottracking
                      ,aeson
                      ,bytestring
                      ,warp
                      ,wai
                      ,wai-extra
                      ,http-types
                      ,text
                      ,hasql
                      ,hasql-postgres
                      ,hasql-backend
                      ,transformers
                      ,scotty
                      ,time
                      ,vector
                      ,blaze-html
                      ,blaze-markup
                      ,containers

  hs-source-dirs:      server
  default-language:    Haskell2010
  ghc-options:         -Wall -fwarn-tabs -threaded -O2 -rtsopts

test-suite spec
  ghc-options:         -Wall -fwarn-tabs
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  hs-source-dirs:      test
  build-depends:       base
                      ,hspec
                      ,aeson
                      ,bytestring
                      ,hspec-wai
                      ,hspec-wai-json
                      ,time
                      ,vector
                      ,spottracking

  default-language:    Haskell2010

